feat: get articles api added
