# docs/swagger.yaml
@@ -1,4 +1,48 @@
 basePath: /
+definitions:
+  health.HelloResponse:
+    properties:
+      data:
+        type: integer
+      msg:
+        type: string
+    type: object
+  homepage.ArticlesResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/homepage.Blog'
+        type: array
+      msg:
+        type: string
+    type: object
+  homepage.Blog:
+    properties:
+      author_id:
+        type: integer
+      category:
+        items:
+          type: string
+        type: array
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      thumbnail_s3_path:
+        type: string
+      title:
+        type: string
+      tsv_content: {}
+    type: object
+  types.ErrResponse:
+    properties:
+      err:
+        type: string
+      msg:
+        type: string
+    type: object
 host: localhost:8000
 info:
   contact:
@@ -8,5 +52,56 @@ info:
     name: MIT License
   title: server api
   version: "1.0"
-paths: {}
+paths:
+  /:
+    get:
+      consumes:
+      - application/json
+      description: returns server time
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/health.HelloResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.ErrResponse'
+      summary: Get Health check status
+      tags:
+      - Health
+  /home/articles:
+    get:
+      consumes:
+      - application/json
+      description: returns server time
+      parameters:
+      - description: int valid
+        in: query
+        maximum: 100
+        minimum: 1
+        name: limit
+        type: integer
+      - description: int valid
+        in: query
+        maximum: 100
+        minimum: 0
+        name: skip
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/homepage.ArticlesResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.ErrResponse'
+      summary: Get Health check status
+      tags:
+      - Health
 swagger: "2.0"
