# utils/types/request.go
@@ -1,0 +1,6 @@
+package types
+
+type ErrResponse struct {
+	Msg string `json:"msg"`
+	Err string `json:"err"`
+}
